# DATX02-20-21

./: .gitignore  LICENSE.txt  README.md  androidStudioFirstRun.xml  build.gradle  github_settings.xml  gradle.properties  jdk.table.xml  project.default.xml  settings.gradle  vcs.xml
app/: build.gradle
app/src/androidTest/java/com/example/datx02_20_21/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: shader.vert  test.txt
app/src/main/assets/shaders/: back_face.frag  boundary.frag  front_and_back_boundary.frag  front_and_back_interior.frag  front_face.frag  interior.frag  results.frag  results.vert
app/src/main/assets/shaders/projection/: divergence.frag  pressure.frag  projection.frag
app/src/main/assets/shaders/render/: back_face.frag  boundary.frag  front_face.frag  max.comp  quad.frag  ray.vert  vertex.vert
app/src/main/assets/shaders/simulation/: boundary.frag  copy.frag  front_and_back_boundary.frag  front_and_back_interior.frag  slab.vert
app/src/main/assets/shaders/simulation/advection/: advection.frag  advection.vert  boundary.frag  front_and_back_boundary.frag  front_and_back_interior.frag
app/src/main/assets/shaders/simulation/diffuse/: diffuse.frag
app/src/main/assets/shaders/simulation/dissipate/: dissipate.frag
app/src/main/assets/shaders/simulation/force/: add_source.frag  add_wind.frag  addition.frag  buoyancy.frag  const.frag  external_force.frag  set_source.frag
app/src/main/assets/shaders/simulation/projection/: divergence.frag  gradient_subtraction.frag  jacobi.frag  projection.frag
app/src/main/assets/shaders/simulation/temperature/: temperature.frag
app/src/main/assets/shaders/simulation/temprature/: temprature.frag
app/src/main/assets/shaders/simulation/vorticity/: vorticity.frag
app/src/main/assets/shaders/simulation/wavelet/: advection.frag  divergence.frag  eigenCalculator.frag  energy_spectrum.frag  fluid_synthesis.frag  jacobian.frag  jacobianCalculator.frag  regeneration.frag  turbulence.frag  turbulence.vert  wavelet.frag
app/src/main/cpp/: CMakeLists.txt  RayRenderer.cpp  RayRenderer.h  Shader.h  data_texture_pair.cpp  data_texture_pair.h  file_loader.cpp  file_loader.h  fire.cpp  fire.h  fire_renderer.cpp  fire_renderer.h  framebuffer.cpp  framebuffer.h  helper.cpp  helper.h  native-lib.cpp  ray_renderer.cpp  ray_renderer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  simple_framebuffer.h  simulator.cpp  simulator.h  slab_operation.cpp  slab_operation.h  wavelet_turbulence.cpp  wavelet_turbulence.h
app/src/main/cpp/fire/: fire.cpp  fire.h  settings.cpp  settings.h
app/src/main/cpp/fire/rendering/: ray_renderer.cpp  ray_renderer.h  renderer.cpp  renderer.h
app/src/main/cpp/fire/simulation/: field_initialization.cpp  field_initialization.h  simulation_operations.cpp  simulation_operations.h  simulator.cpp  simulator.h  slab_operation.cpp  slab_operation.h  wavelet_turbulence.cpp  wavelet_turbulence.h
app/src/main/cpp/fire/util/: data_texture_pair.cpp  data_texture_pair.h  eigen.cpp  eigen.h  file_loader.cpp  file_loader.h  framebuffer.cpp  framebuffer.h  helper.cpp  helper.h  perlin.cpp  perlin.h  shader.cpp  shader.h  simple_framebuffer.cpp  simple_framebuffer.h  turbulence.cpp  turbulence.h  wavelet.cpp  wavelet.h
app/src/main/cpp/glm/: CMakeLists.txt
app/src/main/java/com/example/datx02_20_21/: FireListener.java  FireRenderer.java  FireView.java  MainActivity.java  RayRenderer.java  RayView.java  SlabRenderer.java  SlabView.java
app/src/main/java/com/pbf/: FireActivity.java  FireListener.java  FireRenderer.java  FireView.java  SettingsActivity.java  SettingsFragment.java  SettingsViewModel.java
app/src/main/res/drawable/: ic_keyboard_arrow_down_black_24dp.xml  ic_keyboard_arrow_up_black_24dp.xml  loading.xml  rounded_corners.xml  toggle_selector.xml
app/src/main/res/layout/: activity_main.xml  settings_fragment.xml  spinner_item.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/example/datx02_20_21/: ExampleUnitTest.java
codestyles/: Default.xml
gradle/wrapper/: gradle-wrapper.properties
keymaps/: Default for Windows copy.xml
